Fixed responsiveness of contact-info section for smaller screens - css
Now as the screen size decreases to very small sizes, the expanding header does not cover up any of the contact-info content

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,26 @@ button:focus,
   width: 33%;
 }/* end grid fallback */
 
+.contact-main {
+  max-width: 500px;
+}
+
+.contact-info {
+  margin-top: 30px;
+}
+
+.contact-main,
+.contact-form {
+  display: grid;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+  
+  /* max-width: 50px; */
+  grid-template-columns: 1fr;
+  width: 60%;
+}
+
 @supports (display: grid) {
   .grid {
     display: grid;
@@ -225,15 +245,29 @@ button:focus,
     margin-left: 0;
     margin-right: 0;
   }
-
+  
   .page-footer-home {
     margin-top: 100px;
+  }
+  
+  .contact-info {
+    margin-top: 100px;
+  }
+}
+
+@media all and (max-width: 432px) {
+  .contact-info {
+    margin-top: 120px;
   }
 }
 
 @media all and (min-width: 432px) and (max-width: 575px) {
   .page-footer-home {
     margin-top: 150px;
+  }
+  
+  .contact-info {
+    margin-top: 55px;
   }
 }
 
@@ -248,6 +282,10 @@ button:focus,
   .grid {
     grid-template-columns: 1fr 1fr;
     margin-top: 60px;
+  }
+  
+  .contact-info {
+    margin-top: 55px;
   }
 }
 
@@ -294,21 +332,7 @@ button:focus,
   
 }
 
-.contact-main {
-  max-width: 500px;
-}
 
-.contact-main,
-.contact-form {
-  display: grid;
-  text-align: center;
-  justify-content: center;
-  margin: 0 auto;
-  
-  /* max-width: 50px; */
-  grid-template-columns: 1fr;
-  width: 60%;
-}
 
 /* ANIMATION!! */
 
